trunk/Archive2/0d/5e5380d3052e84/output
main.cpp:3:2: error: invalid preprocessing directive #inlcude
 #inlcude <sstream>
  ^
